<resources>
    <string name="title_activity_navegacion">navegacion</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="codigoUsuario">Código de usuario</string>
    <string name="clave">Clave</string>
    <string name="salirkiosko">¿Desea salir del modo Kiosko?</string>
    <string name="msgsalirkioski">Digita el codigo para poder salir del modo kiosko</string>

    <!-- App Pichincha -->
    <string name="tipoDeCuenta">Tipo de cuenta</string>
    <string name="selecionaLaOperador">Selecciona la operadora</string>


    <!-- Botones -->
    <string name="btn_accept">Aceptar</string>
    <string name="btn_cancel">Cancelar</string>

    <string name="app_name">Banco Pichincha</string>
    <string name="ip_invalid">Invalid ip</string>
    <string name="app_setting">AppSettings</string>
    <string name="unknown_err">Error desconocido!</string>
    <string name="len_err">Len is error</string>
    <string name="data_null">Data is null</string>
    <string name="cancel">Cancel</string>
    <string name="confirm">Confirm</string>
    <string name="save">Save</string>
    <string name="exit">Exit</string>
    <string name="save_success">Save successfully</string>
    <string name="original_pass_err">Original pwd is error</string>

    <string name="re_print">Reprint</string>
    <string name="not_any_record">No any record</string>
    <string name="card_num">CardNO</string>
    <string name="voucher_num">TraceNO</string>
    <string name="amount">Amount</string>
    <string name="batch_num">BatchNO</string>
    <string name="trans_date">TransTime</string>
    <string name="trans_type">TransType</string>
    <string name="trans_sys_para">SysParas</string>
    <string name="trans_merchant_para">MerchantInfo</string>
    <string name="trans_master_pass_para">Modify master pwd</string>
    <string name="modify_maintain_pass">Modify maintain pwd</string>
    <string name="old_pass">OldPwd</string>
    <string name="new_pass">NewPwd</string>
    <string name="trans_scan_para">ScanParas</string>
    <string name="trans_void_pass">Whether Sale-Void needs pwd</string>
    <string name="trans_void_card">Whether Sale-Void needs card</string>
    <string name="trans_contactless_pboc">Whether force contactless PBOC</string>
    <string name="front_camera">Front camera</string>
    <string name="back_camera">Back Camera</string>
    <string name="online_trans">Online Trans</string>
    <string name="local_present">Local Presentation</string>
    <string name="errlog_list">Errlog list</string>
    <string name="android_setting">Android System Settings</string>
    <string name="feedback_advice">Feedback and advice</string>
    <string name="trace_no">TraceNo</string>
    <string name="batch_no">BatchNO</string>
    <string name="tpdu_no">TPDU</string>
    <string name="firm_no">FirmCode</string>
    <string name="print_num_choice">Print counts choice</string>
    <string name="reversal_counts_choice">Reversal counts choice</string>
    <string name="wait_user_time">Waiting user to response(s)</string>
    <string name="open_encrypt_track">Track encrypted On</string>
    <string name="open_scan_beep">Beep prompt On</string>
    <string name="open_shine_light">Light On</string>
    <string name="camera_location_choice">Camera choice</string>
    <string name="merchant_id">Merchant ID</string>
    <string name="terminal_id">Terminal ID</string>
    <string name="merchant_name">Merchant Name</string>
    <string name="wait_connect_time">Waiting network to response(s)</string>
    <string name="open_public_network">Public network On</string>
    <string name="public_network_ip">Public network IP</string>
    <string name="public_network_port">Public network Port</string>
    <string name="intranet_network_ip">Intranet IP</string>
    <string name="intranet_network_port">Intranet Port</string>
    <string name="please_input_masterkey_index">Please enter master key index</string>
    <string name="please_input_masterkey_data">Please enter master key data</string>
    <string name="please_chose_key_type">Please chose key system</string>
    <string name="des">DES</string>
    <string name="gm">GM</string>
    <string name="online_or_local">OnlineTrans or LocalPresentation</string>
    <string name="open_app_debug_output">Log output On</string>
    <string name="please_input_amount">Please enter amount</string>
    <string name="please_input_master_pass">Please enter master pwd</string>
    <string name="please_input_trace_no">Please enter original VOUCHER NO</string>
    <string name="please_input_auth_code">Please enter original AuthCode</string>
    <string name="please_input_data_time">Please enter original TransDate</string>
    <string name="please_input_reference">Plesae enter original Reference</string>
    <string name="please_input_traceno_hint">Please enter TraceNO</string>

    <item name="tag_item_user" type="id"></item>
    <item name="tag_item_history_trans" type="id"></item>
    <string name="qr_bar_code">Put the QR or NAR code into scan box</string>
    <string name="ingresaTarjetaCliente">Ingresa la tarjeta del cliente</string>
    <string name="asegurarIngresarTarjetaCliente">Nota: asegúrate de ingresar la tarjeta del cliente y no la del CNB</string>
    <string name="ingresaTarjetaCNB">Ingresa la tarjeta del CNB</string>
    <string name="asegurarIngresarTarjetaCNB">Nota: asegúrate de ingresar la tarjeta del CNB y no la del cliente</string>
    <string name="ingresaTarjetaFuncionario">Ingresa la tarjeta del funcionario</string>
    <string name="asegurarIngresarTarjetaFunci">Nota: asegúrate de ingresar la tarjeta del funcionario</string>
    <string name="cambioClave">Cambio de clave</string>
    <string name="deseasRealizarCierre">¿Deseas realizar el cierre?</string>
    <string name="guardandoRecibo">Guardando recibo</string>
    <string name="procesando">Procesando</string>
    <string name="crearUsuario">Crear usuario</string>
    <string name="visitaFuncionario">Visita funcionario</string>
    <string name="nombre2P">Nombre:</string>
    <string name="bancoPichincha">Banco Pichincha</string>
    <string name="consulta">Consulta</string>
    <string name="numeroTelefonico2P">Número telefónico:</string>
    <string name="ingresoCortapartida">Ingreso contrapartida</string>
    <string name="cedula">Cédula</string>
    <string name="ruc">Ruc</string>
    <string name="pasaporte">Pasaporte</string>
    <string name="escribaDocuementoPrimero">Escriba el documento primero</string>
    <string name="logoMiVecino">logoMiVecino</string>
    <string name="logoBancoPichincha">logoBancoPichincha</string>
    <string name="pagoDeBono">Pago de bono</string>
    <string name="version">0.6.3</string>
    <string name="sector">Sector económico</string>
    <string name="actividad">Actividad económica</string>
    <string name="ingresos">Ingresos mensuales</string>
    <string name="situacion">Situación laboral</string>
    <string name="corregir">¿Desea corregir?</string>
    <string name="corregirBtn">Corregir</string>
</resources>
