<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@color/white"
    android:padding="20dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_marginTop="30dp"
        android:layout_height="45dp">
        <TextView
            android:id="@+id/tv1"
            android:text="@string/wait_connect_time"
            android:layout_width="wrap_content"
            android:textColor="@color/blueText"
            android:layout_gravity="center_vertical"
            android:textSize="18sp"
            android:layout_height="wrap_content" />
        <EditText
            android:id="@+id/setting_com_timeout"
            android:background="@drawable/edittext_pichi"
            android:maxLength="2"
            android:inputType="number"
            android:gravity="center"
            android:padding="5dp"
            android:textColor="#000000"
            android:textSize="18sp"
            android:layout_width="match_parent"
            android:layout_height="40dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_marginTop="30dp"
        android:layout_height="45dp">
        <TextView
            android:id="@+id/tv2"
            android:text="@string/open_public_network"
            android:layout_width="wrap_content"
            android:textColor="@color/blueText"
            android:layout_gravity="center_vertical"
            android:textSize="18sp"
            android:layout_height="wrap_content" />
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <ImageView
                android:id="@+id/setting_com_public"
                android:background="@android:color/transparent"
                app:srcCompat="@drawable/home2_setting_commun_open"
                android:layout_alignParentRight="true"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="10dp"
                android:layout_width="47dp"
                android:layout_height="23dp" />
        </RelativeLayout>
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:background="#eeeeee"
        android:layout_height="1dp"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="45dp">
        <TextView
            android:id="@+id/tv3"
            android:text="@string/public_network_ip"
            android:layout_width="wrap_content"
            android:textColor="@color/blueText"
            android:layout_gravity="center_vertical"
            android:textSize="18sp"
            android:layout_height="wrap_content" />
        <cn.desert.newpos.payui.setting.view.IPEditText
            android:id="@+id/setting_com_public_ip"
            android:background="@android:color/transparent"
            android:gravity="right"
            android:textColor="#000000"
            android:textSize="18sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:background="#eeeeee"
        android:layout_height="1dp"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:weightSum="1">
        <TextView
            android:id="@+id/tv4"
            android:text="@string/public_network_port"
            android:layout_width="wrap_content"
            android:textColor="@color/blueText"
            android:layout_gravity="center_vertical"
            android:textSize="18sp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"/>
        <EditText
            android:id="@+id/setting_com_public_port"
            android:background="@drawable/edittext_pichi"
            android:padding="5dp"
            android:inputType="number"
            android:maxLength="5"
            android:gravity="center"
            android:textColor="#000000"
            android:textSize="18sp"
            android:layout_width="200dp"
            android:layout_height="40dp"
            android:layout_weight="0.5"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_marginTop="30dp"
        android:layout_height="45dp">
        <TextView
            android:id="@+id/tv5"
            android:text="@string/intranet_network_ip"
            android:layout_width="wrap_content"
            android:textColor="@color/blueText"
            android:layout_gravity="center_vertical"
            android:textSize="18sp"
            android:layout_height="wrap_content" />
        <cn.desert.newpos.payui.setting.view.IPEditText
            android:id="@+id/setting_com_inner_ip"
            android:background="@android:color/transparent"
            android:gravity="right"
            android:textColor="#000000"
            android:textSize="18sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:background="#eeeeee"
        android:layout_height="1dp"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:weightSum="1">
        <TextView
            android:id="@+id/tv6"
            android:text="@string/intranet_network_port"
            android:layout_width="wrap_content"
            android:textColor="@color/blueText"
            android:layout_gravity="center_vertical"
            android:textSize="18sp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"/>
        <EditText
            android:layout_gravity="right"
            android:id="@+id/setting_com_inner_port"
            android:background="@drawable/edittext_pichi"
            android:padding="5dp"
            android:inputType="number"
            android:maxLength="5"
            android:gravity="center"
            android:textColor="#000000"
            android:textSize="18sp"
            android:layout_width="200dp"
            android:layout_height="40dp"
            android:layout_weight="0.5"/>
    </LinearLayout>
</LinearLayout>