<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@color/white"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp">
    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:layout_marginTop="30dp"
        android:layout_height="45dp">
        <TextView
            android:id="@+id/tv1"
            android:text="@string/trans_merchant_para"
            android:layout_gravity="center_vertical"
            android:textStyle="bold"
            android:textColor="@color/blueText"
            android:textSize="20sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <RelativeLayout
            android:id="@+id/setting_home_trans_merchant"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <ImageView
                android:layout_alignParentRight="true"
                app:srcCompat="@drawable/home2_setting_next"
                android:layout_centerHorizontal="true"
                android:paddingTop="15dp"
                android:layout_width="25dp"
                android:layout_height="25dp" />
        </RelativeLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:layout_marginTop="30dp"
        android:layout_height="45dp">
        <TextView
            android:id="@+id/tv2"
            android:text="@string/trans_master_pass_para"
            android:layout_gravity="center_vertical"
            android:textStyle="bold"
            android:textColor="@color/blueText"
            android:textSize="20sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <RelativeLayout
            android:id="@+id/setting_home_trans_pass"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <ImageView
                android:layout_alignParentRight="true"
                app:srcCompat="@drawable/home2_setting_next"
                android:layout_centerHorizontal="true"
                android:paddingTop="15dp"
                android:layout_width="25dp"
                android:layout_height="25dp" />
        </RelativeLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:layout_marginTop="30dp"
        android:layout_height="45dp">
        <TextView
            android:id="@+id/tv3"
            android:text="@string/trans_sys_para"
            android:layout_gravity="center_vertical"
            android:textStyle="bold"
            android:textColor="@color/blueText"
            android:textSize="20sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <RelativeLayout
            android:id="@+id/setting_home_trans_sys"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <ImageView
                android:layout_alignParentRight="true"
                app:srcCompat="@drawable/home2_setting_next"
                android:layout_centerHorizontal="true"
                android:paddingTop="15dp"
                android:layout_width="25dp"
                android:layout_height="25dp" />
        </RelativeLayout>
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:background="#eeeeee"
        android:layout_height="1dp"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:layout_height="45dp">
        <TextView
            android:id="@+id/tv4"
            android:text="@string/trans_scan_para"
            android:layout_gravity="center_vertical"
            android:textStyle="bold"
            android:textColor="@color/blueText"
            android:textSize="20sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <RelativeLayout
            android:id="@+id/setting_home_trans_scan"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <ImageView
                android:layout_alignParentRight="true"
                app:srcCompat="@drawable/home2_setting_next"
                android:layout_centerHorizontal="true"
                android:paddingTop="15dp"
                android:layout_width="25dp"
                android:layout_height="25dp" />
        </RelativeLayout>
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:background="#eeeeee"
        android:layout_height="1dp"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:layout_height="45dp">
        <TextView
            android:id="@+id/tv5"
            android:text="@string/trans_contactless_pboc"
            android:layout_gravity="center_vertical"
            android:textStyle="bold"
            android:textColor="@color/blueText"
            android:textSize="20sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <ImageView
                android:id="@+id/setting_home_trans_force_pboc"
                android:background="@android:color/transparent"
                app:srcCompat="@drawable/home2_setting_commun_open"
                android:layout_alignParentRight="true"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:layout_width="47dp"
                android:layout_height="23dp" />
        </RelativeLayout>
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:background="#eeeeee"
        android:layout_height="1dp"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:layout_height="45dp">
        <TextView
            android:id="@+id/tv6"
            android:text="@string/trans_void_pass"
            android:layout_gravity="center_vertical"
            android:textStyle="bold"
            android:textColor="@color/blueText"
            android:textSize="20sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <ImageView
                android:id="@+id/setting_home_trans_input_pass"
                android:background="@android:color/transparent"
                app:srcCompat="@drawable/home2_setting_commun_open"
                android:layout_alignParentRight="true"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:layout_width="47dp"
                android:layout_height="23dp" />
        </RelativeLayout>
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:background="#eeeeee"
        android:layout_height="1dp"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:layout_height="45dp">
        <TextView
            android:id="@+id/tv7"
            android:text="@string/trans_void_card"
            android:layout_gravity="center_vertical"
            android:textStyle="bold"
            android:textColor="@color/blueText"
            android:textSize="20sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <ImageView
                android:id="@+id/setting_home_trans_use_card"
                android:background="@android:color/transparent"
                app:srcCompat="@drawable/home2_setting_commun_open"
                android:layout_alignParentRight="true"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:layout_width="47dp"
                android:layout_height="23dp" />
        </RelativeLayout>
    </LinearLayout>
</LinearLayout>