<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:background="#eeeeee"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_marginTop="30dp"
        android:background="#FFFFFF"
        android:layout_height="45dp">
        <TextView
            android:text="@string/merchant_id"
            android:layout_width="wrap_content"
            android:textColor="#ff333333"
            android:layout_gravity="center_vertical"
            android:textSize="16sp"
            android:layout_marginLeft="20dp"
            android:layout_height="wrap_content" />
        <EditText
            android:id="@+id/merchant_merid"
            android:background="@android:color/transparent"
            android:paddingTop="15dp"
            android:layout_marginRight="10dp"
            android:maxLength="15"
            android:gravity="right"
            android:inputType="number"
            android:textColor="#000000"
            android:textSize="16sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_marginTop="30dp"
        android:background="#FFFFFF"
        android:layout_height="45dp">
        <TextView
            android:text="@string/terminal_id"
            android:layout_width="wrap_content"
            android:textColor="#ff333333"
            android:layout_gravity="center_vertical"
            android:textSize="16sp"
            android:layout_marginLeft="20dp"
            android:layout_height="wrap_content" />
        <EditText
            android:id="@+id/merchant_tid"
            android:background="@android:color/transparent"
            android:paddingTop="15dp"
            android:layout_marginRight="10dp"
            android:maxLength="8"
            android:inputType="text"
            android:gravity="right"
            android:textColor="#000000"
            android:textSize="16sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_marginTop="30dp"
        android:background="#FFFFFF"
        android:layout_height="45dp">
        <TextView
            android:text="@string/merchant_name"
            android:layout_width="wrap_content"
            android:textColor="#ff333333"
            android:layout_gravity="center_vertical"
            android:textSize="16sp"
            android:layout_marginLeft="20dp"
            android:layout_height="wrap_content" />
        <EditText
            android:id="@+id/merchant_name"
            android:background="@android:color/transparent"
            android:paddingTop="15dp"
            android:layout_marginRight="10dp"
            android:maxLength="32"
            android:gravity="right"
            android:textColor="#000000"
            android:textSize="16sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>
</LinearLayout>