<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#86222222"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:layout_width="300dp"
        android:orientation="vertical"
        android:id="@+id/setting_pass_layout"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:layout_height="270dp">
        <FrameLayout
            android:layout_width="match_parent"
            android:background="@android:color/transparent"
            android:layout_height="100dp">
            <RelativeLayout
                android:layout_width="100dp"
                android:background="@drawable/setting_circle_bg"
                android:layout_gravity="center"
                android:layout_height="90dp"/>
            <RelativeLayout
                android:background="@android:color/white"
                android:layout_width="match_parent"
                android:layout_gravity="bottom"
                android:layout_height="50dp">
                <ImageView
                    android:id="@+id/setting_pass_close"
                    android:layout_width="20dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginTop="10dp"
                    app:srcCompat="@drawable/home2_setting_dialog_close"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentRight="true"
                    android:layout_height="20dp" />
            </RelativeLayout>
            <ImageView
                app:srcCompat="@drawable/home2_setting_dialog_lock"
                android:layout_gravity="center"
                android:layout_width="30dp"
                android:layout_height="46dp" />
        </FrameLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:background="@android:color/white"
            android:orientation="vertical"
            android:layout_height="match_parent">
            <LinearLayout
                android:layout_width="match_parent"
                android:orientation="horizontal"
                android:background="@android:color/white"
                android:layout_height="wrap_content">
                <EditText
                    android:layout_width="wrap_content"
                    android:text="@string/old_pass"
                    android:textSize="16sp"
                    android:layout_marginLeft="20dp"
                    android:gravity="center"
                    android:enabled="false"
                    android:background="#fff5f5f5"
                    android:textStyle="bold"
                    android:textColor="#ff333333"
                    android:layout_height="40dp" />
                <EditText
                    android:id="@+id/setting_pass_old"
                    android:background="#fff5f5f5"
                    android:textColor="#ff333333"
                    android:layout_marginRight="20dp"
                    android:gravity="center"
                    android:maxLength="8"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:inputType="numberPassword"
                    android:layout_width="match_parent"
                    android:layout_height="40dp" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_marginTop="20dp"
                android:background="@android:color/white"
                android:orientation="horizontal"
                android:layout_height="wrap_content">
                <EditText
                    android:layout_width="wrap_content"
                    android:text="@string/new_pass"
                    android:textSize="16sp"
                    android:gravity="center"
                    android:layout_marginLeft="20dp"
                    android:enabled="false"
                    android:background="#fff5f5f5"
                    android:textStyle="bold"
                    android:textColor="#ff333333"
                    android:layout_height="40dp" />
                <EditText
                    android:id="@+id/setting_pass_new"
                    android:background="#fff5f5f5"
                    android:textColor="#ff333333"
                    android:layout_marginRight="20dp"
                    android:textSize="16sp"
                    android:maxLength="8"
                    android:textStyle="bold"
                    android:inputType="numberPassword"
                    android:gravity="center"
                    android:layout_width="match_parent"
                    android:layout_height="40dp" />
            </LinearLayout>
            <RelativeLayout
                android:layout_width="match_parent"
                android:background="@android:color/white"
                android:layout_height="match_parent">
                <Button
                    android:id="@+id/setting_pass_confirm"
                    android:layout_width="130dp"
                    android:layout_marginTop="20dp"
                    android:text="@string/confirm"
                    android:textColor="#ffffffff"
                    android:textSize="18sp"
                    android:layout_centerVertical="true"
                    android:layout_centerHorizontal="true"
                    android:layout_gravity="center"
                    android:background="@drawable/btn_blue_shape"
                    android:layout_height="40dp" />
            </RelativeLayout>
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>